--- a/style.css
+++ b/style.css
@@ -1,1 +1,24 @@
+body {
+  background-color: #F3EFE7;
+}
 
+.container {
+ display: flex;
+ justify-content: center;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  grid-gap: 5px;
+  height: 550px;
+  width: 550px;
+}
+
+.score {
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 700;
+  color: #415147;
+  text-align: center;
+}
