--- a/style.css
+++ b/style.css
@@ -1,24 +1,128 @@
+html {
+  min-height: 100vh;
+  cursor: url(images/cursor.png), auto;
+  font-family: 'Quicksand', sans-serif;
+}
+
 body {
   background-color: #F3EFE7;
+  margin: 0;
 }
 
-.container {
- display: flex;
- justify-content: center;
-}
-
-.grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  grid-gap: 5px;
-  height: 550px;
-  width: 550px;
-}
-
-.score {
+.page-title {
   font-family: 'Quicksand', sans-serif;
-  font-weight: 700;
   color: #415147;
+  font-weight: normal;
   text-align: center;
+  font-size: 6em;
 }
+
+.game-container {
+  margin: 50px auto;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 10px;
+  justify-content: center;
+  perspective: 500px;
+}
+
+.game-info-container {
+  grid-column: 1/-1;
+  display: flex;
+  justify-content: space-between;
+  max-width: 530px;
+}
+
+.game-info {
+  font-family: 'Quicksand', sans-serif;
+  color: #415147;
+}
+
+.card {
+  position: relative;
+  cursor: url(images/cursorhover.png), auto;
+  height: 128px;
+  width: 128px;
+}
+
+.card-face {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  border-width: 1px;
+  border-style: solid;
+  overflow: hidden;
+  transition: transform 500ms ease-in-out;
+  backface-visibility: hidden;
+}
+
+.card.visible .card-back {
+  transform: rotateY(-180deg);
+}
+
+.card.visible .card-front {
+  transform: rotateY(0);
+}
+
+.card-back {
+  background-color: #415147;
+  transform: rotateY(0);
+}
+
+.card-value {
+  position: relative;
+  transition: transform 100ms ease-in-out;
+  transform: scale(.9);
+}
+
+.card-front:hover .card-value {
+  transform: scale(1);
+}
+
+.card-front {
+  transform: rotateY(180deg);
+}
+
+.overlay-text {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  display: none;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: 'Quicksand', sans-serif;
+  color: #F3EFE7;
+  transition: background-color 500ms, font-size 500ms;
+}
+
+.overlay-text-small {
+  font-size: .3em;
+}
+
+.overlay-text.visible {
+  display: flex;
+  animation: overlay-grow 500ms forwards;
+}
+
+@keyframes overlay-grow {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+    font-size: 0;
+  }
+  to {
+    background-color: rgba(0, 0, 0, .8);
+    font-size: 5em;
+  }
+}
+
+
+
+
